Добавил базу и корутины

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
 	<string name="app_name">ShoppingList</string>
 	<!-- TODO: Remove or change this placeholder text -->
 	<string name="hello_blank_fragment">Hello blank fragment</string>
+	<string name="error_input_name">Ошибка ввода имени</string>
+	<string name="error_input_count">Ошибка ввода количества</string>
 </resources>
